[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlmodel-encrypted-fields"
version = "0.1.0"
description = "Encrypted SQLModel fields backed by Tink AEAD."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Isaac" }
]
dependencies = [
  "sqlmodel>=0.0.16",
  "tink>=1.9.0",
]

[project.optional-dependencies]
test = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pytest>=7.4",
]

[project.urls]
Homepage = "https://example.com/sqlmodel-encrypted-fields"

[tool.setuptools.packages.find]
include = ["sqlmodel_encrypted_fields"]
exclude = ["example_app", "example_app.*", "tests", "tests.*"]
